fix: implement tableAlignment classes to enable table alignments in the document

--- a/styles/text.scss
+++ b/styles/text.scss
@@ -409,3 +409,10 @@ span + .sn__link {
   margin-top: 0;
   margin-bottom: 0;
 }
+.sn__tableAlignmentCenter {
+  margin-left: auto;
+  margin-right: auto;
+}
+.sn__tableAlignmentRight {
+  margin-left: auto;
+}
